# keylight-cpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  THIRD_PARTY_NOTICES.md  conanfile.py  keylight_single.hpp  vcpkg.json
.github/workflows/: ci.yml  juce.yml  release.yml
demo/notes/: CMakeLists.txt  main.cpp
include/keylight/: client.hpp  config.hpp  ed25519.hpp  json.hpp  keylight.hpp  keyset.hpp  lease.hpp  result.hpp  sha256.hpp  store.hpp  transport.hpp  verifier.hpp  version.hpp
include/keylight/transport/: httplib.hpp
integrations/juce/: KeylightJuce.h  README.md
integrations/juce/citest/: CMakeLists.txt  main.cpp
integrations/juce/example/: PluginProcessor.cpp
integrations/unreal/: README.md
integrations/unreal/Keylight/: Keylight.uplugin
integrations/unreal/Keylight/Source/Keylight/: Keylight.Build.cs
integrations/unreal/Keylight/Source/Keylight/Private/: FHttpTransport.cpp  FHttpTransport.h  KeylightSubsystem.cpp
integrations/unreal/Keylight/Source/Keylight/Public/: KeylightSubsystem.h
scripts/: sync-vectors.sh
tests/: test_amalgamation.cpp  test_client.cpp  test_ed25519.cpp  test_json.cpp  test_keyset.cpp  test_live.cpp  test_result.cpp  test_sha256.cpp  test_smoke.cpp  test_store.cpp  test_transport_httplib.cpp  test_verifier_conformance.cpp
tools/: amalgamate.py
